@startuml CU7_Gestionar_Proveedores_Productos_Suministrados
title CU7 - Gestionar Proveedores y Productos Suministrados (Diagrama de Clases)

skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor White
  BorderColor #444444
  ArrowColor #444444
}

class Proveedor {
  +id: int
  +nombre: string
  +razonSocial: string
  +nit: string
  +contacto: string
  +telefono: string
  +email: string
  +direccion: string
  +activo: bool
  +fechaCreacion: datetime
  --
  +listar(search, activo)
  +obtenerDetalle()
  +crear()
  +actualizar()
  +bajaLogica()
  +vincularProducto(producto, costoCompra, cantidad)
}

class ProductoProveedor <<clase asociativa>> {
  +idProducto: int <<PK, FK>>
  +idProveedor: int <<PK, FK>>
  +costoCompra: decimal
  +cantidad: int
}

class Producto <<externa (CU5)>> #F5F5F5 {
  +id: int
}

Proveedor "1" -- "0..*" ProductoProveedor : suministra >
ProductoProveedor "0..*" -- "1" Producto

note bottom of ProductoProveedor
  Tabla de union (N:M) entre Producto y
  Proveedor: cada fila representa que un
  proveedor especifico surte un producto
  especifico, con su costo de compra y
  cantidad suministrada.
end note

@enduml
